Added variables @variable-less and @mixins-less to allow the import files "variable.less" and "mixins.less" to be overridable.

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -1,6 +1,9 @@
 // Core variables and mixins
-@import "variables.less";
-@import "mixins.less";
+@variables-less: "variables.less";
+@mixins-less: "mixins.less";
+
+@import "@{variables-less}";
+@import "@{mixins-less}";
 
 // Reset and dependencies
 @import "normalize.less";
