--- a/less/theme.less
+++ b/less/theme.less
@@ -3,8 +3,11 @@
 // Load core variables and mixins
 // --------------------------------------------------
 
-@import "variables.less";
-@import "mixins.less";
+@variables-less: "variables.less";
+@mixins-less: "mixins.less";
+
+@import "@{variables-less}";
+@import "@{mixins-less}";
 
 
 //
