--- a/less/type.less
+++ b/less/type.less
@@ -145,7 +145,7 @@ mark,
 // -------------------------
 
 .page-header {
-  padding-bottom: ((@line-height-computed / 2) - 1);
+  padding-bottom: ((@line-height-computed / 2) - 1/10);
   margin: (@line-height-computed * 2) 0 @line-height-computed;
   border-bottom: 1px solid @page-header-border-color;
 }
