--- a/less/variables.less
+++ b/less/variables.less
@@ -859,3 +859,13 @@
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
+
+
+//
+// Override size and color variables
+//
+@variables-size-less:         "variables-size.less";
+@variables-color-less:        "variables-color.less";
+
+@import (optional) "@{variables-size-less}";
+@import (optional) "@{variables-color-less}";
